# medicare-rebuild

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  JOURNEY.md  README.md  api_utils.py  apply_funcs.py  billing_report.py  dataframe_utils.py  db_utils.py  docker-compose.yml  enums.py  helpers.py  import_devices.py  import_patient_data.py  import_patient_notes.py  import_patient_readings.py  import_patients.py  import_to_sql.py  logger.py  logging.py  main.py  msp_scripts.py  pyproject.toml  queries.py  requirements.txt  reset_patient_tables.sql  sanitize_billing_report.py  sanitize_export.py  sanitize_patient_export.py  snapshot.py  sql_connect.py  standardize_funcs.py
.github/workflows/: ci.yml
lch_tools/: logger.py
legacy/: import_devices.py  import_patient_notes.py  import_patient_readings.py  import_patients.py  sanitize_billing_report.py
queries/: full_reset_patient_tables.sql  get_billing_report.sql  reset_medical_code_tables.sql  reset_patient_note_tables.sql  reset_patient_readings_tables.sql  reset_patient_tables.sql  update_medical_code_device.sql
queries/gets/: get_bg_readings.sql  get_bp_readings.sql  get_device_id.sql  get_fulfillment.sql  get_notes_log.sql  get_patient_id.sql  get_time_log.sql  get_vendor_id.sql
queries/resets/: reset_medical_code_tables.sql  reset_patient_readings_tables.sql
queries/tests/: test_medcode_99453.sql  test_medcode_99453_bp.sql  test_medcode_99458.sql
queries/updates/: update_patient_note.sql  update_patient_status.sql
src/: main.py
src/medicare_rebuild/: __main__.py  helpers.py  logger.py
src/medicare_rebuild/utils/: api_utils.py  dataframe_utils.py  db_utils.py
stored_procedures/: batch_medcode_99202.sql  batch_medcode_99453.sql  batch_medcode_99453_bp.sql  batch_medcode_99453_gluc.sql  batch_medcode_99454.sql  batch_medcode_99454_bp.sql  batch_medcode_99454_gluc.sql  batch_medcode_99457.sql  batch_medcode_99458.sql  create_billing_report.sql  get_my_queue.sql  reset_all_billing_tables.sql
tests/: test_api_utils.py  test_dataframe_utils.py  test_db_utils.py  test_helpers.py  test_logger.py  test_medcode_99202.sql  test_medcode_99454.sql  test_medcode_99458.sql
tests/integration/: conftest.py  test_data_importer_integration.py  test_db_utils_integration.py  test_pipeline_integration.py
tests/queries/: JL_requested_data.sql  test_billing_report.sql  test_get_my_queue.sql  test_medcode_99453_bg.sql  test_medcode_99454_bg.sql  test_medcode_99454_bp.sql  test_medcode_99457.sql  test_medcode_99458.sql
