[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medicare-rebuild"
description = "Python-based solution designed to rebuild the data architecture for a medical company specializing in remote physician monitoring."
authors = [{ name = "Craig Hurley", email = "chingdorp@pm.me" }]
version = "3.3.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "Pandas >=2.0.3, <3.0.0",
    "NumPy >=1.24.3, <2.0.0",
    "SQLAlchemy >=2.0.23, <3.0.0",
    "psycopg2 >=2.9.6, <3.0.0",
]

[project.urls]
Repository = "https://github.com/chingdrop/medicare-rebuild"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = { where = ["src"] }

[tool.setuptools.package-dir]
"" = "src"