[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medicare-rebuild"
description = "Python-based solution designed to rebuild the data architecture for a medical company specializing in remote physician monitoring."
authors = [{ name = "Craig Hurley", email = "chingdorp@pm.me" }]
version = "3.3.0"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "Pandas >=2.0.3, <3.0.0",
    "NumPy >=1.24.3, <2.0.0",
    "SQLAlchemy >=2.0.23, <3.0.0",
    "pyodbc >=5.1.0, <6.0.0",
    "colorlog >=6.8.0, <7.0.0",
    "python-dotenv >=1.0.1, <2.0.0",
    "requests >=2.31.0, <3.0.0",
    "openpyxl >=3.1.2, <4.0.0",
    "py-shared-tools",
]

[project.urls]
Repository = "https://github.com/chingdrop/medicare-rebuild"

[project.scripts]
medicare-rebuild = "medicare_rebuild.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = { where = ["src"] }

[tool.setuptools.package-dir]
"" = "src"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest >=8.3.5, <9.0.0",
    "requests-mock>=1.12.1",
    "ruff>=0.15.21",
    "pandas-stubs~=2.3.3",
    "pre-commit>=4.6.0",
]

[tool.uv.sources]
py-shared-tools = { git = "https://github.com/chingdrop/py-shared-tools", rev = "v1.3.1" }

[tool.pytest.ini_options]
markers = [
    "integration: exercises a real database container; skipped by default, run with -m integration",
]
addopts = "-m 'not integration'"

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
files = ["src"]
